--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,16 @@ input {
   margin-top: 20px;
 }
 
+button {
+  padding: 12px 15px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  font-size: 18px;
+  min-width: 200px;
+  margin-top: 20px;
+  margin-left: 5px;
+}
+
 p {
   margin-top: 12px;
   font-size: 18px;
